# SPDX-License-Identifier: Apache-2.0
[package]
name = "cadmpeg"
description = "Inspect, decode, validate, compare, and convert CAD models."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://github.com/cadmpeg/cadmpeg/blob/main/crates/cadmpeg/README.md"
keywords = ["cad", "converter", "step", "brep", "geometry"]
categories = ["command-line-utilities", "encoding", "graphics"]
default-run = "cadmpeg"

[[bin]]
name = "cadmpeg"
path = "src/main.rs"

[dependencies]
cadmpeg-ir.workspace = true
cadmpeg-codec-f3d.workspace = true
cadmpeg-codec-freecad.workspace = true
cadmpeg-codec-sldprt.workspace = true
cadmpeg-codec-catia.workspace = true
cadmpeg-codec-creo.workspace = true
cadmpeg-codec-nx.workspace = true
cadmpeg-codec-rhino.workspace = true
cadmpeg-codec-iges.workspace = true
cadmpeg-step.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
crc32fast.workspace = true
predicates.workspace = true
zip.workspace = true
# The CLI integration tests build `cadmpeg_ir::examples`; the feature keeps
# those fixtures out of the normal library build.
cadmpeg-ir = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
